# ogn-client-rs

./: .dockerignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md
.cargo/: config
.github/workflows/: rust.yml
misc/: create_tables.sql
src/: console_logger.rs  date_time_guesser.rs  distance_service.rs  element_getter.rs  glidernet_collector.rs  main.rs  ogn_comment.rs  ogn_message_converter.rs  ogn_packet.rs  output_handler.rs  position_comment.rs  receiver.rs  server_response_container.rs  status_comment.rs  utils.rs
src/containers/: comment_container.rs  containers.rs  mod.rs  parser_error_container.rs  position_container.rs  server_comment_container.rs  status_container.rs
src/input/: mod.rs  stdin_actor.rs
src/messages/: mod.rs  ognmessagewithtimestamp.rs  server_response_container.rs
src/output/: influxdb_actor.rs  mod.rs  mqtt_actor.rs  postgresql_actor.rs  stdout_actor.rs
src/processing/: filter_actor.rs  mod.rs  parser_actor.rs  validation_actor.rs
