[package]
name = "ogn-client"
version = "0.2.2"
authors = ["Konstantin Gründger <konstantin.gruendger@web.de>"]
edition = "2024"

[dependencies]
ogn-parser = "0.3.12"
clap = { version = "4.0.8", features = ["derive"] }
actix = "0.10.0"
actix-ogn = "0.4.0"
log = "0.4"
pretty_env_logger = "0.5.0"
serde_json = "1.0.89"
json-patch = "*"
influxdb-line-protocol = "2.0.0"
chrono = "0.4.41"
itertools = "0.14.0"
postgres = "0.19"
geo-types = "0.7"

[profile.release]
strip = true        # Automatically strip symbols from the binary
opt-level = "z"     # Optimize for binary size
lto = true          # Enable link time optimization
codegen-units = 1   # Maximize size reduction optimizations
panic = "abort"     # Remove the code for unwind the stack after panic
