[package]
name = "ogn-client"
version = "0.2.5"
authors = ["Konstantin Gründger <konstantin.gruendger@web.de>"]
edition = "2024"

[dependencies]
ogn-parser = "0.3.15"
clap = { version = "4.0.8", features = ["derive"] }
actix = "0.10.0"
actix-ogn = "0.4.0"
log = "0.4"
pretty_env_logger = "0.5.0"
chrono = "0.4.41"
itertools = "0.14.0"
postgres = "0.19"
influxlp-tools = "0.2.3"
rumqttc = "0.24.0"
rust_decimal = "1.37.1"
csv = "1.3.1"
serde = "1.0.219"

[profile.release]
strip = true        # Automatically strip symbols from the binary
opt-level = "z"     # Optimize for binary size
lto = true          # Enable link time optimization
codegen-units = 1   # Maximize size reduction optimizations
panic = "abort"     # Remove the code for unwind the stack after panic
